Fri Aug 23 14:12:10 2002  George Lebl <jirka@5z.com>

	* daemon/slave.c:  Cleanup the exit stuff

	* daemon/display.c, daemon/gdm.c: don't do setsid on -nodaemon
	  as that breaks running from init and do it for the slave as
	  that's correct.

	* daemon/slave.c, daemon/display.c, daemon/gdm.c:  Cleanup
	  killing children a bit, and session cleanup stuff.  Don't
	  kill pids not greater then 1 to be extra anal and if we can't
	  fork the slave set the pid to 0 and not leave it at -1.

	* daemon/server.c: kill redundant line

Fri Aug 23 11:04:38 2002  George Lebl <jirka@5z.com>

	* daemon/gdm.[ch], daemon/slave.c, gui/gdmlogin.c,
	  gui/greeter/greeter.c: Whack DefaultLocale as that
	  setting was on crack to begin with.  If the system default
	  is being used just don't set anything.  If you want gdm
	  to use some language other then the system default, change
	  the gdm startup script, but that doesn't seem to make much
	  sense.  Check for language existance and if it doesn't exist
	  use the system default.  Now bsd and non-bsd language setup
	  is not different (And is still bsd-setusercontext-nice).
	  Whack the unaliasing of languages.  That was complete nonsense,

	* daemon/auth.c: when UserAuthDir is ~ make it the home dir,
	  when it starts with ~/, prepend the home dir.  This actually
	  makes this setting usable

	* config/gdm.conf.in: lot more documentation comments.  I really
	  REALLY should write docs for gdm at some point.

	* gui/gdmchooser.c: also accept <host>.png as host images.  That's
	  really a lot more sane and nicer.

Fri Aug 23 01:56:21 2002  George Lebl <jirka@5z.com>

	* configure.in, NEWS: prepare for 2.4.0.9

Fri Aug 23 01:09:36 2002  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c: fix subtle possible race that could kill another
	  process and simplify code in the meantime.  Ignore SIGCHLD, and
	  don't wait for the background process until we want to kill it,
	  that may leave a zombie for a little bit if the process dies early,